erDiagram
    CLIENTES ||--o{ EQUIPOS : tiene
    CLIENTES ||--o{ FACTURAS : recibe
    EQUIPOS ||--o{ DIAGNOSTICOS : tiene
    EQUIPOS ||--o{ DETALLES_EQUIPO : tiene
    EMPLEADOS ||--o{ DETALLES_EQUIPO : actualiza
    EMPLEADOS ||--o{ RECEPCION_EQUIPOS : realiza
    EQUIPOS ||--o{ RECEPCION_EQUIPOS : es_recibido
    DIAGNOSTICOS ||--o{ DIAGNOSTICO_PROCEDIMIENTOS : tiene
    PROCEDIMIENTOS ||--o{ DIAGNOSTICO_PROCEDIMIENTOS : es_usado_en
    PROCEDIMIENTOS ||--o{ TARIFAS : tiene
    CLIENTES ||--o{ ARREGLOS : solicita
    EMPLEADOS ||--o{ ARREGLOS : realiza
    ARREGLOS ||--o{ DETALLES_ARREGLO : tiene
    EQUIPOS ||--o{ DETALLES_ARREGLO : es_arreglado_en
    ROLES ||--o{ EMPLEADOS : tiene

    CLIENTES {
        int id_cliente PK
        string nombre_cliente
        string apeliido_cliente
        string correo_cliente
        string telefono_cliente
        string direccion_cliente
    }

    EQUIPOS {
        int id_equipo PK
        int id_cliente FK
        string marca
        string modelo
        string numero_serial
        date fecha_registro
    }

    DIAGNOSTICOS {
        int id_diagnostico PK
        int id_equipo FK
        enum tipo_diagnostico
        string descripcion
        date fecha_diagnostico
    }

    EMPLEADOS {
        int id_empleado PK
        string nombre_usuario
        string apeliido_usuario
        string contraseña_usuario
        string correo_usuario
        string telefono_usuario
        string direccion_usuario
        int id_rol FK
    }

    ROLES {
        int id_rol PK
        string nombre_rol
    }

    DETALLES_EQUIPO {
        int id_detalle PK
        int id_equipo FK
        enum estado
        string descripcion
        date fecha_actualizacion
        int id_empleado FK
    }

    RECEPCION_EQUIPOS {
        int id_recepcion PK
        int id_equipo FK
        int id_empleado FK
        date fecha_recepcion
        string observaciones
    }

    PROCEDIMIENTOS {
        int id_procedimiento PK
        string nombre_procedimiento
        string descripcion
    }

    TARIFAS {
        int id_tarifa PK
        int id_procedimiento FK
        decimal costo
    }

    DIAGNOSTICO_PROCEDIMIENTOS {
        int id_diagnostico FK
        int id_procedimiento FK
    }

    ARREGLOS {
        int id_arreglo PK
        int id_cliente FK
        int id_empleado FK
        date fecha_ingreso
        date fecha_entrega
    }

    DETALLES_ARREGLO {
        int id_detalle_arreglo PK
        int id_equipo FK
        int id_arreglo FK
        string descripcion
        int cantidad
    }

    FACTURAS {
        int id_factura PK
        int id_cliente FK
        int id_arreglo FK
        date fecha_emision
        decimal total
    }

